--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,21 @@
+#
+# config/nice_nano_v2.conf
+# Улучшения BLE-соединения для nice!nano v2 (nRF52840)
+#
+
+# Включить набор экспериментальных настроек ZMK, направленных на стабильность соединения
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+# Включить экспериментальные настройки безопасности (passkey entry / overwrite old keys).
+# Помогает с проблемами паринга на Windows/некоторых ОС.
+CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=y
+# Альтернатива (если хочешь только passkey, а не весь набор):
+# CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+
+# Явно отключить 2M PHY (если нужен ручной контроль).
+# EXPERIMENTAL_CONN обычно уже делает это, но можно задать явно:
+CONFIG_BT_CTLR_PHY_2M=n
+
+# Повысить мощность передачи (nRF52840): +8 dBm — улучшает диапазон/устойчивость.
+# Учти: чуть больше расход батареи.
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
