--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,21 +1,35 @@
 #
 # config/nice_nano_v2.conf
-# Улучшения BLE-соединения для nice!nano v2 (nRF52840)
+# Улучшения BLE + power для nice!nano v2 (nRF52840)
 #
 
-# Включить набор экспериментальных настроек ZMK, направленных на стабильность соединения
+# Уже пробовали — оставляем (устранение 2M PHY и т.п.)
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-
-# Включить экспериментальные настройки безопасности (passkey entry / overwrite old keys).
-# Помогает с проблемами паринга на Windows/некоторых ОС.
 CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=y
-# Альтернатива (если хочешь только passkey, а не весь набор):
-# CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
-
-# Явно отключить 2M PHY (если нужен ручной контроль).
-# EXPERIMENTAL_CONN обычно уже делает это, но можно задать явно:
 CONFIG_BT_CTLR_PHY_2M=n
-
-# Повысить мощность передачи (nRF52840): +8 dBm — улучшает диапазон/устойчивость.
-# Учти: чуть больше расход батареи.
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Увеличить лимиты пар/соединений (если нужно; для split central — на 1 больше)
+# Подставь нужное число; 6 = 5 профилей + 1 для split/центра
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
+
+# Power / sleep — варианты (выбери одно из двух подходов ниже)
+
+# ---------- ВАРИАНТ A: полностью ОТКЛЮЧИТЬ deep sleep (не теряет соединение) ----------
+# Если хочешь чтобы устройство оставалось подключённым всегда — отключи sleep:
+# CONFIG_ZMK_SLEEP=n
+
+# ---------- ВАРИАНТ B: оставить sleep, но сильно увеличить таймаут (не терять пару минуты) ----------
+# Если хочешь сохранить deep sleep ради экономии батареи, но не через 1–2 минуты:
+# (значения в миллисекундах; по умолчанию idle=30000 (30s), deep sleep = 900000 (15min))
+# Увеличим idle (время до idle) и idle->sleep таймаут:
+CONFIG_ZMK_IDLE_TIMEOUT=60000           # 60s до idle (по умолчанию 30s)
+CONFIG_ZMK_SLEEP=y                      # включаем deep sleep, только если выбрал B
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000   # 1 час до перехода в deep sleep (вместо 15min)
+
+# (Опционально) отключить BLE battery reporting — иногда вызывает странности на хосте
+# CONFIG_BT_BAS=n
+
+# (Опционально) если используешь ZMK Studio/Studio RPC, можно настроить дескрипторы
+# CONFIG_ZMK_STUDIO_TRANSPORT_BLE_PREF_LATENCY=10
