--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,24 +11,24 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Увеличить лимиты пар/соединений (если нужно; для split central — на 1 больше)
 # Подставь нужное число; 6 = 5 профилей + 1 для split/центра
-CONFIG_BT_MAX_CONN=2
-CONFIG_BT_MAX_PAIRED=2
+# CONFIG_BT_MAX_CONN=2
+# CONFIG_BT_MAX_PAIRED=2
 
 # Power / sleep — варианты (выбери одно из двух подходов ниже)
 
 # ---------- ВАРИАНТ A: полностью ОТКЛЮЧИТЬ deep sleep (не теряет соединение) ----------
 # Если хочешь чтобы устройство оставалось подключённым всегда — отключи sleep:
-# CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_SLEEP=n
 
 # ---------- ВАРИАНТ B: оставить sleep, но сильно увеличить таймаут (не терять пару минуты) ----------
 # Если хочешь сохранить deep sleep ради экономии батареи, но не через 1–2 минуты:
 # (значения в миллисекундах; по умолчанию idle=30000 (30s), deep sleep = 900000 (15min))
 # Увеличим idle (время до idle) и idle->sleep таймаут:
-CONFIG_ZMK_IDLE_TIMEOUT=60000           
+# CONFIG_ZMK_IDLE_TIMEOUT=60000           
 # 60s до idle (по умолчанию 30s)
-CONFIG_ZMK_SLEEP=y                      
+# CONFIG_ZMK_SLEEP=y                      
 # включаем deep sleep, только если выбрал B
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000   
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000   
 # 1 час до перехода в deep sleep (вместо 15min)
 
 # (Опционально) отключить BLE battery reporting — иногда вызывает странности на хосте
