--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,7 +18,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # ---------- ВАРИАНТ A: полностью ОТКЛЮЧИТЬ deep sleep (не теряет соединение) ----------
 # Если хочешь чтобы устройство оставалось подключённым всегда — отключи sleep:
-CONFIG_ZMK_SLEEP=n
+# CONFIG_ZMK_SLEEP=n
 
 # ---------- ВАРИАНТ B: оставить sleep, но сильно увеличить таймаут (не терять пару минуты) ----------
 # Если хочешь сохранить deep sleep ради экономии батареи, но не через 1–2 минуты:
