--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,8 +11,8 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Увеличить лимиты пар/соединений (если нужно; для split central — на 1 больше)
 # Подставь нужное число; 6 = 5 профилей + 1 для split/центра
-# CONFIG_BT_MAX_CONN=3
-# CONFIG_BT_MAX_PAIRED=3
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
 
 # Power / sleep — варианты (выбери одно из двух подходов ниже)
 
